// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> Default story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <input
    class="input"
    placeholder="Placeholder"
  />
</div>
`;

exports[`<Input /> Disabled story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <input
    class="input"
    disabled=""
    style="margin-bottom: 0.5rem;"
    value="Default Value"
  />
  <input
    class="input"
    disabled=""
    placeholder="Placeholder"
  />
</div>
`;

exports[`<Input /> Error story renders snapshot 1`] = `
<div
  style="padding: 0.5rem; background-color: white;"
>
  <input
    class="input error"
    style="margin-bottom: 0.5rem;"
  />
  <input
    class="input error"
    placeholder="Placeholder"
  />
</div>
`;
